Filter collapse handle fix (#1280)

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -37,9 +37,13 @@
   }
 
   @media (min-width: $screen-sm-min) {
-    padding: 20px 15px 6px;
+    padding: 20px 15px;
     position: absolute;
     width: 100%;
+
+    &.filter-wrapper-collapse {
+      padding-bottom: 6px;
+    }
   }
 }
 
